# QApoetry

./: pyproject.toml
