[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Shrimp-pixel <aleksander.17047665@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
selene = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
